tests/ui/type-alias-impl-trait/recursive-fn-tait.stderr
error: cannot resolve opaque type
  --> $DIR/recursive-fn-tait.rs:15:6
   |
LL | ) -> Diff {
   |      ^^^^

error: aborting due to 1 previous error

